# can-ai-drink-beer

./: .gitignore  README.md
semantic-versioning/: version-major.md  version-minor.md  version-patch.md
src/tasks_mcp_server/: repositories.py  services.py
tasks-mcp-server/: README.md  hello_mcp.txt  pyproject.toml
tasks-mcp-server/docs/: architecture.md  demo-workflow.md  release-notes-v0.5.0.md  release-notes-v0.5.1.md  release-notes-v0.5.2.md  troubleshooting.md
tasks-mcp-server/docs/cursor/: demo-prompt.md  mcp-config.json  mcp-config.md
tasks-mcp-server/examples/: sample_tasks.json
tasks-mcp-server/scripts/: load_sample_tasks.py
tasks-mcp-server/specifications/: roadmap.md  v-0.1.0-core-task-storage.md  v-0.2.0-rest-api.md  v-0.3.0-frontend.md  v-0.4.0-mcp-server.md  v-0.5.0-demo-documentation.md  v-0.5.1-mcp-rest-api-integration.md  v-0.5.2-cursor-mcp-settings-correction.md
tasks-mcp-server/src/tasks_mcp_server/: __init__.py  app.py  config.py  database.py  mcp_api_client.py  mcp_server.py  mcp_tools.py  models.py  repositories.py  schemas.py  services.py  web.py
tasks-mcp-server/src/tasks_mcp_server/api/: tasks.py
tasks-mcp-server/src/tasks_mcp_server/static/: app.js  styles.css
tasks-mcp-server/src/tasks_mcp_server/templates/: index.html
tasks-mcp-server/tests/: test_api_tasks.py  test_database.py  test_load_sample_tasks.py  test_mcp_api_client.py  test_mcp_tools.py  test_task_service.py  test_web_routes.py
