[project]
name = "tasks-mcp-server"
version = "0.2.0"
description = "Task storage backend for MCP and REST API integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "sqlmodel>=0.0.22,<0.1.0",
    "uvicorn>=0.32.0,<1.0.0",
    "pytest>=8.0.0,<10.0.0",
    "httpx>=0.27.0,<1.0.0",
    "ruff>=0.8.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tasks_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
